로그인-회원가입 초기모델 연결구현/

--- a/src/main/WebContent/WEB-INF/web.xml
+++ b/src/main/WebContent/WEB-INF/web.xml
@@ -25,8 +25,17 @@
   <context-param>
     <param-name>OraclePwd</param-name>
     <param-value>1234</param-value>
+    
   </context-param>
     <session-config>
     <session-timeout>300</session-timeout>
   </session-config>
+  
+    <context-param>
+    <param-name>CHAT_ADDR</param-name>
+    <param-value>ws://localhost:8081/MustHaveJSP</param-value>
+  </context-param>
+  
+   
+  
 </web-app>
