로그인후 메인페이지에서 상품등록 sellProduct.jsp에서 로그인유저정보/상품정보 sellController/sellDAO 통해서 DB저장(사진error수정해야함) 후 메인스크린이동
SQL폴더생성

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//src/main/WebContent/member/SignIn.jsp=UTF-8
+encoding//src/main/WebContent/sell/sell2.jsp=UTF-8
 encoding/<project>=UTF-8
