--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//src/main/WebContent/Naver/callback.jsp=UTF-8
 encoding//src/main/WebContent/member/SignIn.jsp=UTF-8
 encoding//src/main/WebContent/sell/sell2.jsp=UTF-8
 encoding/<project>=UTF-8
