--- a/src/main/WebContent/WEB-INF/web.xml
+++ b/src/main/WebContent/WEB-INF/web.xml
@@ -82,4 +82,25 @@
     <servlet-name>AddressToCoordinatesServlet</servlet-name>
     <url-pattern>/AddressToCoordinatesServlet</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>KakaoHospitalSearchServlet</display-name>
+    <servlet-name>KakaoHospitalSearchServlet</servlet-name>
+    <servlet-class>hospital.KakaoHospitalSearchServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>KakaoHospitalSearchServlet</servlet-name>
+    <url-pattern>/KakaoHospitalSearch</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>ProxyServlet</display-name>
+    <servlet-name>ProxyServlet</servlet-name>
+    <servlet-class>hospital.ProxyServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ProxyServlet</servlet-name>
+    <url-pattern>/ProxyServlet</url-pattern>
+  </servlet-mapping>
+  
 </web-app>
