--- a/src/main/WebContent/WEB-INF/web.xml
+++ b/src/main/WebContent/WEB-INF/web.xml
@@ -102,5 +102,15 @@
     <servlet-name>ProxyServlet</servlet-name>
     <url-pattern>/ProxyServlet</url-pattern>
   </servlet-mapping>
+    <servlet>
+    <description></description>
+    <display-name>IdFindController</display-name>
+    <servlet-name>IdFindController</servlet-name>
+    <servlet-class>Check.IdFindController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>IdFindController</servlet-name>
+    <url-pattern>/IdFindController</url-pattern>
+  </servlet-mapping>
   
 </web-app>
