logout서블렛 오류수정 commit

--- a/src/main/WebContent/WEB-INF/web.xml
+++ b/src/main/WebContent/WEB-INF/web.xml
@@ -60,7 +60,7 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>LogoutController</servlet-name>
-    <url-pattern>/Logout.do</url-pattern>
+    <url-pattern>/logout.do</url-pattern>
   </servlet-mapping>
   <servlet>
     <description></description>
