--- a/src/main/WebContent/WEB-INF/web.xml
+++ b/src/main/WebContent/WEB-INF/web.xml
@@ -48,10 +48,10 @@
     <servlet-name>LoginController</servlet-name>
     <servlet-class>User.LoginController</servlet-class>
   </servlet>
-  <servlet-mapping>
+<!--   <servlet-mapping>
     <servlet-name>LoginController</servlet-name>
     <url-pattern>/login.do</url-pattern>
-  </servlet-mapping>
+  </servlet-mapping> -->
   <servlet>
     <description></description>
     <display-name>LogoutController</display-name>
@@ -269,5 +269,14 @@
 		<servlet-name>idCheck</servlet-name>
 		<servlet-class>Check.idCheck</servlet-class>
 	</servlet>
-
+  <servlet>
+    <description></description>
+    <display-name>ChangePwd</display-name>
+    <servlet-name>ChangePwd</servlet-name>
+    <servlet-class>Check.ChangePwd</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ChangePwd</servlet-name>
+    <url-pattern>/ChangePwd</url-pattern>
+  </servlet-mapping>
 </web-app>
