--- a/src/main/WebContent/WEB-INF/web.xml
+++ b/src/main/WebContent/WEB-INF/web.xml
@@ -48,10 +48,10 @@
     <servlet-name>LoginController</servlet-name>
     <servlet-class>User.LoginController</servlet-class>
   </servlet>
-<!--   <servlet-mapping>
+<servlet-mapping>
     <servlet-name>LoginController</servlet-name>
     <url-pattern>/login.do</url-pattern>
-  </servlet-mapping> -->
+  </servlet-mapping>
   <servlet>
     <description></description>
     <display-name>LogoutController</display-name>
