--- a/src/main/WebContent/WEB-INF/web.xml
+++ b/src/main/WebContent/WEB-INF/web.xml
@@ -2,20 +2,22 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="https://jakarta.ee/xml/ns/jakartaee" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd" id="WebApp_ID" version="6.0">
   <display-name>iMarket</display-name>
   <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
+<!--     <welcome-file>index.html</welcome-file>
     <welcome-file>index.jsp</welcome-file>
     <welcome-file>index.htm</welcome-file>
     <welcome-file>default.html</welcome-file>
     <welcome-file>default.jsp</welcome-file>
-    <welcome-file>default.htm</welcome-file>
+    <welcome-file>default.htm</welcome-file> -->
+   <welcome-file>MainPage.do</welcome-file>
+     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
-      <resource-ref>
-        <description>Oracle Datasource example</description>
-        <res-ref-name>jdbc/myoracle</res-ref-name>
-        <res-type>javax.sql.DataSource</res-type>
-        <res-auth>Container</res-auth>
-    </resource-ref>
     
+  <resource-ref>
+    <description>Oracle Datasource example</description>
+    <res-ref-name>jdbc/myoracle</res-ref-name>
+    <res-type>javax.sql.DataSource</res-type>
+    <res-auth>Container</res-auth>
+  </resource-ref>
   <context-param>
     <param-name>OracleDriver</param-name>
     <param-value>oracle.jdbc.OracleDriver</param-value>
@@ -223,16 +225,6 @@
     <servlet-name>ReviewEditServlet</servlet-name>
     <url-pattern>/review/edit</url-pattern>
   </servlet-mapping>
-  <!-- <servlet>
-    <description></description>
-    <display-name>ReviewViewServlet</display-name>
-    <servlet-name>ReviewViewServlet</servlet-name>
-    <servlet-class>review.ReviewViewServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>ReviewViewServlet</servlet-name>
-    <url-pattern>/review/view</url-pattern>
-  </servlet-mapping> -->
   <servlet>
     <description></description>
     <display-name>ReviewDeleteServlet</display-name>
@@ -253,7 +245,7 @@
     <servlet-name>ImageServlet</servlet-name>
     <url-pattern>/review/images/*</url-pattern>
   </servlet-mapping>
-    <servlet>
+  <servlet>
     <servlet-name>ReviewLikeController</servlet-name>
     <servlet-class>review.LikeController</servlet-class>
   </servlet>
@@ -287,7 +279,6 @@
     <servlet-name>ChangePwd</servlet-name>
     <url-pattern>/ChangePwd</url-pattern>
   </servlet-mapping>
-
   <servlet>
     <description></description>
     <display-name>ProductCount</display-name>
@@ -298,5 +289,13 @@
     <servlet-name>ProductCount</servlet-name>
     <url-pattern>/ProductCount</url-pattern>
   </servlet-mapping>
-</web-app>
+    <servlet>
+        <servlet-name>MainPageController</servlet-name>
+        <servlet-class>itemList.MainPageController</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>MainPageController</servlet-name>
+        <url-pattern>/MainPage.do</url-pattern>
+    </servlet-mapping>
 
+</web-app>
