--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,6 @@
 eclipse.preferences.version=1
 encoding//src/main/WebContent/Board/Write.jsp=UTF-8
+encoding//src/main/WebContent/DetailPage/DetailTest.jsp=UTF-8
 encoding//src/main/WebContent/Naver/callback.jsp=UTF-8
 encoding//src/main/WebContent/admin/index.jsp=UTF-8
 encoding//src/main/WebContent/member/SignIn.jsp=UTF-8
